# mercury

./: .gitignore  README.md
docs/: powershell-template.ps1  template.json
install/: install.ps1  install.sh
mercury/: Cargo.toml
mercury/src/: bin.rs
mercury/src/lib/: benchmark.rs  declaration.rs  executer.rs  lib.rs  printer.rs
mercury/src/lib/parser/: manifest.rs  mod.rs
mercury/test/config/: ubuntu_linux_22__04_lts.toml
mercury/test/manifest/: ubuntu22.json
modules/lib/: lib.ps1  lib.sh
modules/linux/postgresql_14/: manifest.json  postgresql_14.toml
modules/linux/postgresql_14/scripts/: installation.sh  logging.sh  settings.sh  special.sh  uaa.sh
modules/linux/ubuntu_linux_22__04_lts/: manifest.json  ubuntu_linux_22__04_lts.toml
modules/linux/ubuntu_linux_22__04_lts/scripts/: files.sh  kernel.sh  pwquality.sh  service.sh  sshd.sh  timesync.sh
modules/windows/microsoft_iis_10/: manifest.json  microsoft_iis_10.toml
modules/windows/microsoft_iis_10/scripts/: asp.ps1  authentication.ps1  request.ps1  transport.ps1
modules/windows/microsoft_windows_server_2022/: manifest.json  microsoft_windows_server_2022.toml
modules/windows/microsoft_windows_server_2022/scripts/: assignment.ps1  security.ps1  service.ps1
